# cli

./: .gitignore  README.md  make.sh  pyproject.toml
src/cli/: ansible_commands.py  bootstrap.py  bootstrap_wizard.py  deploy.py  rotate_vault.py  startup.py  sync_commands.py  update_vault_secrets.py  wizard_output.py
src/cli/hetzner/: __init__.py  _output.py  automation.py  config.py  credentials.py  robot.py
src/cli/vault/: __init__.py  common.py  fields.py  files.py  utils.py
tests/: README.md  __init__.py  test_ansible_restore.py  test_ansible_update_vms.py  test_deploy.py
tests/data/: all copy.yaml.bak  all.yaml  all.yaml.bak  hcloud_token  hcloud_token.bak
tests/data/group_vars/: production.yml.bak
tests/vault_features/: __init__.py  test_edge_cases.py  test_multiple_operations.py  test_rotate_keys.py  test_update_fields.py  test_update_files.py  utils.py
