[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deploy-your-startup-cli"
version = "0.4.0"
description = "CLI tool for Deploy Your Startup operations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Deploy Your Startup", email = "contact@deployyourstartup.com"}
]
dependencies = [
    "ansible>=11.4.0",
    "click>=8.1.0",
    "httpx>=0.28.1",
    "pygithub>=2.6.1",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.8.0",
]
server = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]

[project.urls]
"Homepage" = "https://github.com/Deploy-your-Startup/cli"
"Bug Tracker" = "https://github.com/Deploy-your-Startup/cli/issues"

[project.scripts]
startup = "cli.startup:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cli*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
